Trab4/target/generated-sources/antlr4/br/ufscar/dc/compiladores/trab4/BatalhaParser.java
// Generated from br/ufscar/dc/compiladores/trab4/Batalha.g4 by ANTLR 4.7.2
package br.ufscar.dc.compiladores.trab4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BatalhaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, PalavrasChave=11, VIRGULA=12, DOISPONTOS=13, Abre=14, Fecha=15, 
		Tipo=16, Nome=17, Vida=18, COMENTARIO=19, WS=20, ERRO=21;
	public static final int
		RULE_programa = 0, RULE_corpo = 1, RULE_declaracao_equipe = 2, RULE_declaracao_selvagem = 3, 
		RULE_acao = 4, RULE_cmdLutar = 5, RULE_cmdTrocar = 6, RULE_cmdFugir = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "corpo", "declaracao_equipe", "declaracao_selvagem", "acao", 
			"cmdLutar", "cmdTrocar", "cmdFugir"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'pokemon equipe'", "'nome'", "'tipo'", "'vida'", "'fim equipe'", 
			"'pokemon selvagem'", "'fim selvagem'", "'Lutar'", "'Trocar'", "'Fugir'", 
			null, "','", "':'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "PalavrasChave", 
			"VIRGULA", "DOISPONTOS", "Abre", "Fecha", "Tipo", "Nome", "Vida", "COMENTARIO", 
			"WS", "ERRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Batalha.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BatalhaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			corpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public Declaracao_selvagemContext declaracao_selvagem() {
			return getRuleContext(Declaracao_selvagemContext.class,0);
		}
		public List<Declaracao_equipeContext> declaracao_equipe() {
			return getRuleContexts(Declaracao_equipeContext.class);
		}
		public Declaracao_equipeContext declaracao_equipe(int i) {
			return getRuleContext(Declaracao_equipeContext.class,i);
		}
		public List<AcaoContext> acao() {
			return getRuleContexts(AcaoContext.class);
		}
		public AcaoContext acao(int i) {
			return getRuleContext(AcaoContext.class,i);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_corpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(18);
				declaracao_equipe();
				}
				}
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(23);
			declaracao_selvagem();
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(24);
				acao();
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_equipeContext extends ParserRuleContext {
		public List<TerminalNode> DOISPONTOS() { return getTokens(BatalhaParser.DOISPONTOS); }
		public TerminalNode DOISPONTOS(int i) {
			return getToken(BatalhaParser.DOISPONTOS, i);
		}
		public TerminalNode Nome() { return getToken(BatalhaParser.Nome, 0); }
		public List<TerminalNode> VIRGULA() { return getTokens(BatalhaParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(BatalhaParser.VIRGULA, i);
		}
		public TerminalNode Tipo() { return getToken(BatalhaParser.Tipo, 0); }
		public TerminalNode Vida() { return getToken(BatalhaParser.Vida, 0); }
		public Declaracao_equipeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_equipe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterDeclaracao_equipe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitDeclaracao_equipe(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitDeclaracao_equipe(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_equipeContext declaracao_equipe() throws RecognitionException {
		Declaracao_equipeContext _localctx = new Declaracao_equipeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_equipe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(T__0);
			setState(30);
			match(T__1);
			setState(31);
			match(DOISPONTOS);
			setState(32);
			match(Nome);
			setState(33);
			match(VIRGULA);
			setState(34);
			match(T__2);
			setState(35);
			match(DOISPONTOS);
			setState(36);
			match(Tipo);
			setState(37);
			match(VIRGULA);
			setState(38);
			match(T__3);
			setState(39);
			match(DOISPONTOS);
			setState(40);
			match(Vida);
			setState(41);
			match(VIRGULA);
			setState(42);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_selvagemContext extends ParserRuleContext {
		public List<TerminalNode> DOISPONTOS() { return getTokens(BatalhaParser.DOISPONTOS); }
		public TerminalNode DOISPONTOS(int i) {
			return getToken(BatalhaParser.DOISPONTOS, i);
		}
		public TerminalNode Nome() { return getToken(BatalhaParser.Nome, 0); }
		public List<TerminalNode> VIRGULA() { return getTokens(BatalhaParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(BatalhaParser.VIRGULA, i);
		}
		public TerminalNode Tipo() { return getToken(BatalhaParser.Tipo, 0); }
		public TerminalNode Vida() { return getToken(BatalhaParser.Vida, 0); }
		public Declaracao_selvagemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_selvagem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterDeclaracao_selvagem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitDeclaracao_selvagem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitDeclaracao_selvagem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_selvagemContext declaracao_selvagem() throws RecognitionException {
		Declaracao_selvagemContext _localctx = new Declaracao_selvagemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao_selvagem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__5);
			setState(45);
			match(T__1);
			setState(46);
			match(DOISPONTOS);
			setState(47);
			match(Nome);
			setState(48);
			match(VIRGULA);
			setState(49);
			match(T__2);
			setState(50);
			match(DOISPONTOS);
			setState(51);
			match(Tipo);
			setState(52);
			match(VIRGULA);
			setState(53);
			match(T__3);
			setState(54);
			match(DOISPONTOS);
			setState(55);
			match(Vida);
			setState(56);
			match(VIRGULA);
			setState(57);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AcaoContext extends ParserRuleContext {
		public CmdLutarContext cmdLutar() {
			return getRuleContext(CmdLutarContext.class,0);
		}
		public CmdTrocarContext cmdTrocar() {
			return getRuleContext(CmdTrocarContext.class,0);
		}
		public CmdFugirContext cmdFugir() {
			return getRuleContext(CmdFugirContext.class,0);
		}
		public AcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterAcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitAcao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitAcao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AcaoContext acao() throws RecognitionException {
		AcaoContext _localctx = new AcaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_acao);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				cmdLutar();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				cmdTrocar();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				cmdFugir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdLutarContext extends ParserRuleContext {
		public TerminalNode Abre() { return getToken(BatalhaParser.Abre, 0); }
		public TerminalNode Nome() { return getToken(BatalhaParser.Nome, 0); }
		public TerminalNode Fecha() { return getToken(BatalhaParser.Fecha, 0); }
		public CmdLutarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLutar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterCmdLutar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitCmdLutar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitCmdLutar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdLutarContext cmdLutar() throws RecognitionException {
		CmdLutarContext _localctx = new CmdLutarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdLutar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__7);
			setState(65);
			match(Abre);
			setState(66);
			match(Nome);
			setState(67);
			match(Fecha);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdTrocarContext extends ParserRuleContext {
		public TerminalNode Abre() { return getToken(BatalhaParser.Abre, 0); }
		public TerminalNode Nome() { return getToken(BatalhaParser.Nome, 0); }
		public TerminalNode Fecha() { return getToken(BatalhaParser.Fecha, 0); }
		public CmdTrocarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdTrocar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterCmdTrocar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitCmdTrocar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitCmdTrocar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdTrocarContext cmdTrocar() throws RecognitionException {
		CmdTrocarContext _localctx = new CmdTrocarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdTrocar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__8);
			setState(70);
			match(Abre);
			setState(71);
			match(Nome);
			setState(72);
			match(Fecha);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdFugirContext extends ParserRuleContext {
		public CmdFugirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdFugir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).enterCmdFugir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BatalhaListener ) ((BatalhaListener)listener).exitCmdFugir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BatalhaVisitor ) return ((BatalhaVisitor<? extends T>)visitor).visitCmdFugir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdFugirContext cmdFugir() throws RecognitionException {
		CmdFugirContext _localctx = new CmdFugirContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdFugir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}